[package]
name = "whirlpool"
authors.workspace = true
license-file.workspace = true
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["yaml", "toml"]
yaml = ["serde_yaml"]
toml = ["dep:toml"]

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml= { version = "0.9.21", optional=true }
toml = { version = "0.7.4", optional=true }
tokio = { version = "1.28.1", features = ["full"] }
thiserror = "1.0.40"
whirlpool-common = { version = "0.1.0", path = "../../libs/whirlpool-common" }
clap = { version = "4.3.0", features = ["derive", "env"] }
simple_logger = "4.1.0"
log = "0.4.17"
uuid = { version = "1.3.3", features = ["v4", "serde"] }
ctrlc = "3.3.0"
openssl = { version = "0.10.52", features = ["vendored"] }
base64 = "0.21.0"
tempfile = "3.5.0"
parking_lot = "0.12.1"
